Fix visibility files on git, fix gitignore, fix 3 path to fancybox images in jquery.fancybox.css

--- a/fancybox/source/jquery.fancybox.css
+++ b/fancybox/source/jquery.fancybox.css
@@ -76,7 +76,8 @@
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-	background-image: url('fancybox_sprite.png');
+	/*background-image: url('fancybox_sprite.png');*/
+	background-image: url('fancybox/source/fancybox_sprite.png');
 }
 
 #fancybox-loading {
@@ -114,7 +115,8 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	background: transparent url('blank.gif'); /* helps IE */
+	/*background: transparent url('blank.gif'); *//* helps IE */
+	background: transparent url('fancybox/source/blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
 }
@@ -184,7 +186,8 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	background: url('fancybox_overlay.png');
+	/*background: url('fancybox_overlay.png');*/
+	background: url('fancybox/source/fancybox_overlay.png');
 }
 
 .fancybox-overlay-fixed {
